packages/build/tests/error/fixtures/exception_string/plugin.js
module.exports = {
  async onPreBuild() {
    throw 'test'
  },
}
